# aiops-multi-agent-rag-k8s

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Makefile  PROJECT_CONTEXT.md  PROJECT_PROGRESS.md  README.md  docker-compose.yml
apps/: README.md
apps/admin-web/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
apps/mobile-flutter/: .gitignore  README.md  pubspec.yaml
deploy/: README.md
deploy/docker-compose/: README.md
deploy/helm/: README.md
deploy/k8s/: README.md
deploy/scripts/: README.md
docs/: README.md
docs/api/: README.md  event-contracts.md  product-api-surface.md  rest-api-design.md
docs/architecture/: data-ownership.md  database-design.md  product-design.md  repo-structure.md  service-boundaries.md
docs/development/: README.md  dependency-versioning.md  feed-social-service-implementation-plan.md  (+4 more)
infra/: README.md
services/: README.md
services/aiops-service/: Dockerfile  README.md  pyproject.toml
services/aiops-service/app/: main.py
services/aiops-service/app/agents/: __init__.py  deployment_agent.py  log_agent.py  metric_agent.py  planner_agent.py
services/aiops-service/app/api/: __init__.py
services/aiops-service/app/collectors/: __init__.py  argocd.py  gitlab.py  kubernetes.py  loki.py  prometheus.py
services/aiops-service/app/core/: __init__.py
services/aiops-service/app/rag/: __init__.py
services/aiops-service/app/redaction/: __init__.py
services/aiops-service/app/schemas/: __init__.py
services/aiops-service/app/scoring/: __init__.py
tests/: README.md
tools/: README.md
(+225 files in other folders)
