[project]
name = "aiops-service"
version = "0.1.0"
description = "Evidence-aware Multi-Agent RAG service for Kubernetes RCA"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.0",
  "httpx>=0.28.0",
  "kubernetes>=32.0.0",
  "prometheus-client>=0.21.0",
  "qdrant-client>=1.13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"
